--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,20 @@
   <groupId>com.example</groupId>
   <artifactId>java-learning</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
-  <description>Demo project for Spring Boot</description>
+  <modules>
+    <module>execute-python-script</module>
+  </modules>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.3</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <version>2.5.6</version>
   </parent>
 
   <properties>
-    <java.version>17</java.version>
+    <java.version>8</java.version>
   </properties>
 
   <dependencies>
@@ -35,5 +36,13 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
     </plugins>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+      <resource>
+        <directory>execute-python-script/src/main/resources</directory>
+      </resource>
+    </resources>
   </build>
 </project>
